# tantivy-ik

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: test-tantivy-ik.rs
