[package]
name = "tantivy-ik"
version = "0.5.0"
authors = ["blueshen <zhiyi.shen@gmail.com>"]
license = "LGPL-2.1-only"
categories = ["database-implementations", "data-structures"]
description = """chinese segment, ik-rs for tantivy"""
documentation = "https://docs.rs/tantivy-ik"
homepage = "https://github.com/blueshen/tantivy-ik"
repository = "https://github.com/blueshen/tantivy-ik"
readme = "README.md"
keywords = ["search", "information", "retrieval", "tantivy", "ik-analyzer"]
edition = "2021"

[dependencies]
tantivy-tokenizer-api = "0.1.1"
tantivy = "0.20.2"
# ik-rs = "0.5.0"
ik-rs = {git="https://github.com/jobdeng/ik-rs.git", branch="main"}
once_cell = "1.16.0"
cfg-if = "1.0.0"
parking_lot = {version="0.12.1", features=["deadlock_detection","hardware-lock-elision"], optional=true}

[features]
default = ["use-parking-lot"]
use-std-sync = []
use-parking-lot = ["dep:parking_lot"]